--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,18 @@
-.App {
-  text-align: center;
+body {
+margin: 0; /* Remove default margin */
+padding: 0; /* Remove default padding */
+overflow-x: hidden; /* Prevent horizontal scrolling */
+background-color: black;
+}
+.Navbar_Hero_Container {
+    display: flex;
+    flex-direction: column;
+    gap: 10rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.Hero_About_Container {
+    display: flex;
+    flex-direction: column;
+    gap: 10rem;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
